<resources>
    <string name="app_name" translatable="false">RunLife</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_main" translatable="false">Run Life</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="libreString">Libre</string>
    <string name="tiempoString">Tiempo</string>
    <string name="datosString">Datos</string>
    <string name="historialString">Historial Entrenamientos</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="title_activity_informacion_entrenamiento">InformacionEntrenamientoActivity
    </string>
    <string name="title_activity_borrar">Map</string>
    <string name="title_activity_delete">Map</string>
    <string name="esperaHead_text">Espere...</string>
    <string name="esperaBody_text">Por favor no se mueva, espere a que se calibre el GPS. A continuación comenzará su entrenamiento.</string>
    <string name="carreras_string">Calendario Carreras</string>
    <string name="okgps_string">Pulse Empezar</string>
    <string name="okgpsbody_string">GPS Calibrado correctamente. Pulse el botón para comenzar el entrenamiento.</string>
    <string name="comienzoEntrenamiento_voice">Comienza el entrenamiento</string>
    <string name="distanciaString">Distancia</string>
    <string name="ayuda_string">Ayuda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="entrenamiento_String">Entrenamiento</string>
    <string name="introducirDistancia_string">Distancia entrenamiento:</string>
    <string name="aceptar_string">Aceptar</string>
    <string name="distanciaMetros_string">Distancia en Metros</string>
    <string name="objetivo_string">Objetivo:</string>
    <string name="inicio_String">Inicio</string>
    <string name="acercaDe_string">Acerca De</string>
    <string name="salir_string">Salir</string>
    <string name="error_string">Error</string>
    <string name="tutorial1H_string">Mejora</string>
    <string name="tutorial1B_string">Utiliza nuestra aplicacion para entrenar y mejora tus capacidades como corredor. En un tiempo verás como tus resultados mejoran considerablemente.</string>
    <string name="tutorial2H_string">Carreras</string>
    <string name="tutorial2B_string">Enterate de todas las carreras que se celebran próximamente en tu ciudad. Puedes consultar el calendario desde la barra de menu y acceder a su información.</string>
    <string name="tutorial3H_string">Progreso</string>
    <string name="tutorial3B_string">Accede a tu historial de entrenamientos para observar entrenamientos ya realizados. En ellos podrás observar las rutas que has seguido.</string>
    <string name="permisoOk_string">Permisos Otorgados. Vuelva a pulsar el entrenamiento.</string>
    <string name="entrenamientoFinalizado_string">Entrenamiento Finalizado</string>
    <string name="activeGPS_string">Active el GPS</string>
    <string name="comprobarInternet_string">Compruebe su conexion de internet</string>
</resources>
