<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_portada"
            android:icon="@drawable/home"
            android:title="@string/inicio_String" />
    </group>

    <item android:title="@string/entrenamiento_String">
        <menu>
        <item
            android:id="@+id/menu_entrenamientoLibre"
            android:icon="@drawable/runicon"
            android:title="@string/libreString" />
        <item
            android:id="@+id/menu_entrenamientoDistancia"
            android:icon="@drawable/ruler"
            android:title="@string/distanciaString" />
        </menu>
    </item>
    <item android:title="@string/datosString">
        <menu>
            <item
                android:id="@+id/menu_historial"
                android:icon="@drawable/trainning"
                android:title="@string/historialString" />
            <item
                android:id="@+id/menu_carreras"
                android:icon="@drawable/competiciones"
                android:title="@string/carreras_string" />
        </menu>
    </item>
    <item android:title="@string/ayuda_string">
        <menu>
            <item
                android:id="@+id/menu_ayuda"
                android:icon="@drawable/help"
                android:title="@string/ayuda_string" />
        </menu>
    </item>

</menu>
